--- a/www/styles.css
+++ b/www/styles.css
@@ -43,6 +43,17 @@ h1, h2, h3, h4 { font-weight: 400; }
   font-size: 12px;
 }
 
+/* Geomatica logo */
+.card img{
+    opacity: 0.5;
+    border-radius: 10px;
+}
+/* Fade in while hovering */
+.card:hover {
+  opacity: 0.95;
+  transition-delay: 0;
+}
+
 /* If not using map tiles, show a white background */
 .leaflet-container {
   background-color: white !important;
