--- a/www/styles.css
+++ b/www/styles.css
@@ -2,14 +2,21 @@ input[type="number"] {
   max-width: 80%;
 }
 
+/* Interactive map div */
 div.outer {
   position: fixed;
-  top: 41px;
+  /* top: 41px; If navBarPage*/ 
+  top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   overflow: hidden;
   padding: 0;
+}
+
+/* If not using map tiles, show a white background */
+.leaflet-container {
+  background-color: white !important;
 }
 
 /* Customize fonts */
@@ -54,7 +61,3 @@ h1, h2, h3, h4 { font-weight: 400; }
   transition-delay: 0;
 }
 
-/* If not using map tiles, show a white background */
-.leaflet-container {
-  background-color: white !important;
-}
